--- a/frontend/app/views/main.html
+++ b/frontend/app/views/main.html
@@ -1,27 +1,18 @@
-<div class="modal fade" id="simple-dialog" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h4 class="modal-title" id="exampleModalLabel">
-          Welcome
-        </h4>
-      </div>
-      <div class="modal-body">
-        <form id="email-form">
-          <div class="form-group">
-            <input type="email" class="form-control" id="email" placeholder="Insert your E-mail address here" required>
-          </div>
-        <button type="submit" class="btn btn-primary">Send message</button>
+<div class="welcome" ng-controller="RegisterCtrl" >
+    <div class="col-md-6 col-md-offset-3 text-center">
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam culpa dolore dolorum earum esse qui rem
+            sint. Architecto corporis distinctio earum ex iure laudantium non pariatur provident, rerum saepe totam.
+        </p>
 
+        <form  ng-submit="registerUser()">
+            <div class="form-group">
+                <input type="email" class="form-control" id="exampleInputEmail1" ng-model="UserData.email" placeholder="Please, insert your E-mail Address">
+            </div>
+
+            <button type="submit" value="register" class="btn btn-default">Submit</button>
         </form>
-      </div>
+
+
     </div>
-  </div>
 </div>
-
-<script type="text/javascript">
-    $(window).load(function(){
-        $('#simple-dialog').modal({'backdrop': 'static'});
-    });
-</script>
-
